--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="item_pressed">#f6f6f6</color>
     <color name="stroke_common">#e9e9e9</color>
     <color name="round_img_border">#88ffffff</color>
+    <color name="round_img_border_">#888888</color>
     <!--disable color, eg btn-->
     <color name="disable_btn">#999999</color>
     <!--horizontal divide line-->
