优化我学的课列表的显示

--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -17,6 +17,7 @@
                 android:layout_marginLeft="@dimen/px30"
                 android:layout_centerInParent="true"
                 android:src="@drawable/back_arrow"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
