--- a/app/src/main/res/layout/layout_course_item_function.xml
+++ b/app/src/main/res/layout/layout_course_item_function.xml
@@ -39,6 +39,12 @@
                 android:textColor="@color/common_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
+        <com.benyuan.xiaojs.ui.widget.flow.ImageFlowLayout
+                android:id="@+id/course_item_fun_stu_images"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
     <LinearLayout
