--- a/app/src/main/res/layout/layout_my_course.xml
+++ b/app/src/main/res/layout/layout_my_course.xml
@@ -85,16 +85,47 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
-                <RelativeLayout
+                <LinearLayout
                         android:layout_marginTop="@dimen/px28"
+                        android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
+                    <com.benyuan.xiaojs.ui.widget.RoundedImageView
+                            android:id="@+id/course_teacher_image"
+                            android:layout_width="@dimen/px40"
+                            android:layout_height="@dimen/px40"
+                            app:corner_radius="@dimen/px20"
+                            android:visibility="gone"
+                            android:src="@drawable/default_portrait"
+                            android:layout_marginRight="@dimen/px14"
+                            android:layout_gravity="center_vertical"/>
+
+                    <TextView
+                            android:id="@+id/course_price"
+                            android:textSize="@dimen/font_28px"
+                            android:textStyle="bold"
+                            android:layout_marginRight="@dimen/px30"
+                            android:layout_gravity="center_vertical"
+                            android:textColor="@color/red"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:id="@+id/course_desc"
+                            android:textSize="@dimen/font_22px"
+                            android:layout_gravity="center_vertical"
+                            android:maxLines="1"
+                            android:ellipsize="end"
+                            android:textColor="@color/common_text"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"/>
+
                     <TextView
                             android:id="@+id/course_state"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerInParent="true"
                             android:layout_marginLeft="@dimen/px30"
+                            android:layout_gravity="center_vertical"
                             android:textSize="@dimen/font_26px"
                             android:paddingLeft="@dimen/px5"
                             android:paddingRight="@dimen/px5"
@@ -102,29 +133,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
 
-                    <TextView
-                            android:id="@+id/course_price"
-                            android:layout_alignParentLeft="true"
-                            android:layout_centerInParent="true"
-                            android:textSize="@dimen/font_28px"
-                            android:textStyle="bold"
-                            android:textColor="@color/red"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
 
-                    <TextView
-                            android:id="@+id/course_desc"
-                            android:layout_centerInParent="true"
-                            android:layout_toRightOf="@id/course_price"
-                            android:textSize="@dimen/font_22px"
-                            android:layout_toLeftOf="@id/course_state"
-                            android:layout_marginLeft="@dimen/px10"
-                            android:maxLines="1"
-                            android:ellipsize="end"
-                            android:textColor="@color/common_text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                </RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
