--- a/app/src/main/res/layout/activity_lesson_create_optional_info.xml
+++ b/app/src/main/res/layout/activity_lesson_create_optional_info.xml
@@ -76,6 +76,25 @@
     <include
             layout="@layout/layout_horizontal_line"/>
 
+    <!--直播课标签-->
+    <LinearLayout
+            android:id="@+id/live_lesson_label_layout"
+            style="@style/LiveLessonItem">
+
+        <TextView
+                style="@style/LiveLessonCreateTitle"
+                android:text="@string/live_lesson_label"/>
+
+        <TextView
+                android:id="@+id/live_lesson_label"
+                style="@style/LiveLessonRightEntrance"
+                android:text="@string/live_lesson_label_hint"/>
+
+    </LinearLayout>
+
+    <include
+            layout="@layout/layout_horizontal_line"/>
+
     <!--老师介绍-->
     <LinearLayout
             android:id="@+id/teacher_introduction_layout"
