--- a/app/src/main/res/layout/activity_live_lesson_detail.xml
+++ b/app/src/main/res/layout/activity_live_lesson_detail.xml
@@ -495,6 +495,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerInParent="true"
+                        android:background="@drawable/toggle_btn_selector"
                         android:textOff=""
                         android:textOn=""/>
             </RelativeLayout>
