--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -46,7 +46,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginRight="@dimen/px30"
                 android:layout_toLeftOf="@id/right_image"
-                android:src="@drawable/add_selector"
+                android:src="@drawable/mail_list_selector"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
     </RelativeLayout>
@@ -58,6 +58,7 @@
             android:id="@+id/listview"
             android:orientation="vertical"
             android:dividerHeight="0dp"
+            android:paddingBottom="@dimen/px100"
             android:divider="@android:color/transparent"
             android:scrollbars="none"
             android:layout_width="match_parent"
