促销设置界面调整。

--- a/app/src/main/res/layout/activity_sale_promotion.xml
+++ b/app/src/main/res/layout/activity_sale_promotion.xml
@@ -44,83 +44,117 @@
             style="@style/DividerHorizontal"/>
 
     <!--报名前几名学生的促销-->
-    <LinearLayout
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@color/white"
-            android:paddingLeft="@dimen/px40"
-            android:paddingRight="@dimen/px40"
-            android:paddingTop="@dimen/px20"
-            android:gravity="center_vertical">
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px32"
+            android:background="@color/white">
 
         <TextView
+                android:id="@+id/sale_promotion_one_status"
+                android:layout_alignParentLeft="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/promotion_enroll_b"/>
+                android:textSize="@dimen/font_28px"
+                android:textColor="@color/font_black"
+                android:drawablePadding="@dimen/px10"
+                android:text="@string/promotion_one"
+                android:layout_centerInParent="true"
+                android:drawableBottom="@drawable/sale_promotion_selector"/>
 
-        <EditText
-                android:id="@+id/enroll_before"
-                android:layout_width="@dimen/px120"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_26px"
-                android:gravity="center"
+        <View
+                android:id="@+id/sale_promotion_one_dl"
                 android:layout_marginLeft="@dimen/px10"
-                android:padding="@dimen/px10"
-                android:lines="1"
-                android:maxLength="6"
-                android:inputType="number"
-                android:background="@drawable/common_edittext_bg"/>
+                android:layout_toRightOf="@+id/sale_promotion_one_status"
+                android:background="@color/ver_divide_line"
+                android:layout_width="@dimen/px1"
+                android:layout_height="@dimen/px100"
+                android:layout_centerInParent="true"/>
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        <LinearLayout
+                android:layout_toRightOf="@+id/sale_promotion_one_dl"
                 android:layout_marginLeft="@dimen/px10"
-                android:text="@string/promotion_enroll_m"/>
-
-        <EditText
-                android:id="@+id/enroll_discount"
-                android:layout_width="@dimen/px120"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_26px"
-                android:gravity="center"
-                android:layout_marginLeft="@dimen/px10"
-                android:padding="@dimen/px10"
-                android:lines="1"
-                android:maxLength="3"
-                android:inputType="numberDecimal"
-                android:background="@drawable/common_edittext_bg"/>
-
-        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/px10"
-                android:text="@string/discount"/>
-    </LinearLayout>
+                android:orientation="vertical">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            android:paddingLeft="@dimen/px40"
-            android:paddingRight="@dimen/px40"
-            android:paddingBottom="@dimen/px20"
-            android:paddingTop="@dimen/px15"
-            android:gravity="center_vertical">
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/px20"
+                    android:gravity="center_vertical">
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/promotion_price"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/promotion_enroll_b"/>
 
-        <TextView
-                android:id="@+id/enroll_promotion_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/font_red"
-                android:layout_marginLeft="@dimen/px10"/>
-    </LinearLayout>
+                <EditText
+                        android:id="@+id/enroll_before"
+                        android:layout_width="@dimen/px120"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/font_26px"
+                        android:gravity="center"
+                        android:layout_marginLeft="@dimen/px10"
+                        android:padding="@dimen/px10"
+                        android:lines="1"
+                        android:maxLength="6"
+                        android:inputType="number"
+                        android:background="@drawable/common_edittext_bg"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/px10"
+                        android:text="@string/promotion_enroll_m"/>
+
+                <EditText
+                        android:id="@+id/enroll_discount"
+                        android:layout_width="@dimen/px120"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/font_26px"
+                        android:gravity="center"
+                        android:layout_marginLeft="@dimen/px10"
+                        android:padding="@dimen/px10"
+                        android:lines="1"
+                        android:maxLength="3"
+                        android:inputType="numberDecimal"
+                        android:background="@drawable/common_edittext_bg"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/px10"
+                        android:text="@string/discount"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:orientation="horizontal"
+                    android:paddingBottom="@dimen/px20"
+                    android:paddingTop="@dimen/px15"
+                    android:gravity="center_vertical">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/promotion_price"/>
+
+                <TextView
+                        android:id="@+id/enroll_promotion_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_red"
+                        android:layout_marginLeft="@dimen/px10"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <View
             style="@style/DividerHorizontal"
@@ -128,84 +162,118 @@
             android:layout_marginRight="@dimen/px40"/>
 
     <!--上课前几天的促销-->
-
-    <LinearLayout
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/px20"
-            android:paddingLeft="@dimen/px40"
-            android:paddingRight="@dimen/px40"
-            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px32"
             android:background="@color/white">
 
         <TextView
+                android:id="@+id/sale_promotion_two_status"
+                android:layout_alignParentLeft="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/promotion_attend_lesson_b"/>
+                android:textSize="@dimen/font_28px"
+                android:textColor="@color/font_black"
+                android:drawablePadding="@dimen/px10"
+                android:text="@string/promotion_two"
+                android:layout_centerInParent="true"
+                android:drawableBottom="@drawable/sale_promotion_selector"/>
 
-        <EditText
-                android:id="@+id/attend_lesson_before"
-                android:layout_width="@dimen/px120"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_26px"
-                android:gravity="center"
+        <View
+                android:id="@+id/sale_promotion_two_dl"
                 android:layout_marginLeft="@dimen/px10"
-                android:padding="@dimen/px10"
-                android:lines="1"
-                android:maxLength="3"
-                android:inputType="number"
-                android:background="@drawable/common_edittext_bg"/>
+                android:layout_toRightOf="@+id/sale_promotion_two_status"
+                android:background="@color/ver_divide_line"
+                android:layout_width="@dimen/px1"
+                android:layout_height="@dimen/px100"
+                android:layout_centerInParent="true"/>
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        <LinearLayout
+                android:layout_toRightOf="@+id/sale_promotion_two_dl"
                 android:layout_marginLeft="@dimen/px10"
-                android:text="@string/promotion_attend_lesson_m"/>
-
-        <EditText
-                android:id="@+id/attend_lesson_discount"
-                android:layout_width="@dimen/px120"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/font_26px"
-                android:gravity="center"
-                android:padding="@dimen/px10"
-                android:layout_marginLeft="@dimen/px10"
-                android:lines="1"
-                android:maxLength="3"
-                android:inputType="numberDecimal"
-                android:background="@drawable/common_edittext_bg"/>
-
-        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/discount"
-                android:layout_marginLeft="@dimen/px10"/>
-    </LinearLayout>
+                android:orientation="vertical">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:paddingLeft="@dimen/px40"
-            android:paddingRight="@dimen/px40"
-            android:paddingBottom="@dimen/px20"
-            android:paddingTop="@dimen/px15"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/px20"
+                    android:gravity="center_vertical"
+                    android:background="@color/white">
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/promotion_price"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/promotion_attend_lesson_b"/>
 
-        <TextView
-                android:id="@+id/attend_lesson_promotion_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/font_red"
-                android:layout_marginLeft="@dimen/px10"/>
-    </LinearLayout>
+                <EditText
+                        android:id="@+id/attend_lesson_before"
+                        android:layout_width="@dimen/px120"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/font_26px"
+                        android:gravity="center"
+                        android:layout_marginLeft="@dimen/px10"
+                        android:padding="@dimen/px10"
+                        android:lines="1"
+                        android:maxLength="3"
+                        android:inputType="number"
+                        android:background="@drawable/common_edittext_bg"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/px10"
+                        android:text="@string/promotion_attend_lesson_m"/>
+
+                <EditText
+                        android:id="@+id/attend_lesson_discount"
+                        android:layout_width="@dimen/px120"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/font_26px"
+                        android:gravity="center"
+                        android:padding="@dimen/px10"
+                        android:layout_marginLeft="@dimen/px10"
+                        android:lines="1"
+                        android:maxLength="3"
+                        android:inputType="numberDecimal"
+                        android:background="@drawable/common_edittext_bg"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/discount"
+                        android:layout_marginLeft="@dimen/px10"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:paddingBottom="@dimen/px20"
+                    android:paddingTop="@dimen/px15"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/promotion_price"/>
+
+                <TextView
+                        android:id="@+id/attend_lesson_promotion_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_red"
+                        android:layout_marginLeft="@dimen/px10"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <Button
             android:id="@+id/sub_btn"
