remove sesson when invoken api

--- a/app/src/main/res/layout/activity_test_api.xml
+++ b/app/src/main/res/layout/activity_test_api.xml
@@ -32,4 +32,9 @@
             android:text="quite"
             android:onClick="btnClicked"/>
 
+    <ImageView
+            android:id="@+id/loading"
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
+
 </LinearLayout>
