--- a/app/src/main/res/layout/layout_common_dialog.xml
+++ b/app/src/main/res/layout/layout_common_dialog.xml
@@ -22,6 +22,8 @@
             android:textSize="@dimen/font_28px"
             android:text="desc"
             android:layout_marginTop="@dimen/px30"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
