--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -64,7 +64,6 @@
                                     android:id="@+id/user_name"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="范爷"
                                     android:textColor="@color/white"
                                     android:textSize="@dimen/font_28px"/>
 
@@ -108,7 +107,7 @@
                         android:layout_marginBottom="@dimen/px60"
                         android:textSize="@dimen/font_22px"
                         android:layout_gravity="center_horizontal"
-                        android:textColor="@color/font_light_gray"
+                        android:textColor="@color/white"
                         android:layout_height="wrap_content"/>
             </LinearLayout>
 
