优化消息逻辑，优化我的课列表显示

--- a/app/src/main/res/layout/layout_course_item_function.xml
+++ b/app/src/main/res/layout/layout_course_item_function.xml
@@ -25,6 +25,7 @@
                 android:layout_height="wrap_content"/>
 
         <View
+                android:id="@+id/fun_divider"
                 style="@style/DividerVertical"
                 android:layout_gravity="center_vertical"
                 android:layout_height="@dimen/px36"/>
