--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -12,9 +12,59 @@
             android:id="@+id/base_header_divider"
             style="@style/DividerHorizontal2"/>
 
-    <FrameLayout
-            android:id="@+id/base_content"
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+        <FrameLayout
+                android:id="@+id/base_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        <LinearLayout
+                android:id="@+id/base_failed"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                    android:id="@+id/base_failed_image"
+                    android:scaleType="fitXY"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/ic_data_failed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/base_failed_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/px30"
+                    android:visibility="visible"
+                    android:text="@string/load_failed_tip"
+                    android:textColor="@color/common_text"
+                    android:textSize="@dimen/font_28px"
+                    android:layout_gravity="center_horizontal"/>
+
+            <TextView
+                    android:id="@+id/base_failed_desc1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible"
+                    android:text="@string/load_failed_tip_2"
+                    android:textColor="@color/common_text"
+                    android:textSize="@dimen/font_28px"
+                    android:layout_gravity="center_horizontal"/>
+
+            <Button
+                    android:id="@+id/base_failed_click"
+                    style="@style/BigSubmitBtn"
+                    android:layout_marginTop="@dimen/px90"
+                    android:visibility="visible"
+                    android:text="@string/reload"/>
+        </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
