--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,6 +41,7 @@
                 android:layout_height="@dimen/px90"
                 android:layout_centerInParent="true"
                 android:scaleType="centerCrop"
+                android:src="@drawable/default_avatar"
                 roundimg:oval="true"/>
 
         <ImageView
