--- a/app/src/main/res/layout/activity_base_list.xml
+++ b/app/src/main/res/layout/activity_base_list.xml
@@ -2,7 +2,7 @@
 
 <com.handmark.pulltorefresh.AutoPullToRefreshListView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/message_list"
+        android:id="@+id/base_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
