--- a/pulltorefresh/src/main/res/layout/pull_to_refresh_header_vertical.xml
+++ b/pulltorefresh/src/main/res/layout/pull_to_refresh_header_vertical.xml
@@ -43,8 +43,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:textAppearance="?android:attr/textAppearance"
-                android:textStyle="bold" />
+                android:textSize="14sp"
+                android:textColor="#8a8a8a"
+                />
 
             <TextView
                 android:id="@+id/pull_to_refresh_sub_text"
